Created multiple custom widgets within MainApplication.kv to reduce code reuse -
1. IPv4AndSubnetMaskLayout widget provides a reusable layout for entering an IPv4 address and Subnet mask.

2. InterfaceTypeSpinnerLayout widget provides a spinner drop down menu for selecting an interface type

3. InterfaceSelectionLayout widget provides a reusable layout for selecting an Interface type and number

Cleaned up MainApplication.kv to be more readable and provided additional explnation for custom widgets.

Modified IntConfAssignIPv4Layout within IntConfMenu.kv to make use of the InterfaceSelectionLayout and IPv4AndSubnetMaskLayout custome widgets to reduce code.

Modified IntConfAssignIPv4Execute Within IntConfMenu.py. Changed how the text inputs are read due to the modified KV file.changed how the text inputs are read due to the modified KV file.

Changed variable name hostname_command to config_commands in BasicConfHostnameExecute within BasicConfMenu.py to be inline with the rest of the script.

Updated and defined RoutingIntStaticRoute menu from placeholder to allow for options to be set by user.

Updated and defined RoutingIntDefaultGateway menu from placeholder to allow for options to be set by user.

Placed IPv4TargetDeviceLayout at the bottom of all three function menus.

Updated RoutingIntStaticRoute function within RoutingIntMenu.py to gather user input and configure a static route on a network device.

Updated RoutingIntDefaultGateway function within RoutingIntMenu.py to gather user input and configure a default gateway on a network device.

Updated RoutingIntDefaultRoute function within RoutingIntMenu.py with variables and commands required. Menu is not finalised within KV as such variable will not get results.

--- a/MainApplication.kv
+++ b/MainApplication.kv
@@ -2,11 +2,17 @@
 
 #:import Factory kivy.factory.Factory
 
+
+
+
 #Create a Custom Button Widget for an Execute Button
 
 <Execute@Button>:
     text: 'Execute'
     size_hint: 0.5, 0.1
+
+
+
 
 #Create a Custom TextInput Widget for IPv4 Address Text Input
 
@@ -17,9 +23,14 @@
     height: '32dp'
 
 
+
+
+#Create a Custom GridLayout for combining IPv4AddressInput Widget and a Label
+
 <IPv4TargetDeviceLayout@GridLayout>:
     orientation: 'vertical'
-    cols: 2
+    rows: 1
+    spacing: 2
     Label: 
         text: 'Enter IPv4 Address of  Target Device'
         size_hint_y: None
@@ -27,11 +38,12 @@
     IPv4AddressInput:
         id: IPv4AddressTextInput
 
-#Create a custome Spinner Widget to allow for the Subnet/ to be selected
+
+
+
+#Create a custome Spinner Widget to allow for the subnet to be selected
 
 <SubnetMaskSpinnerLayout@RelativeLayout>: 
-  
-    # creating the spinner 
     Spinner:
         id: SubnetMaskSpinner
         size_hint: 1, None
@@ -39,6 +51,59 @@
         sync_height: True
         text: 'Subnet Mask'
         values: '255.255.255.0', '255.255.255.128', '255.255.255.192', '255.255.255.224', '255.255.255.240', '255.255.255.248', '255.255.255.252'
+
+
+
+#Create a Custom GridLayout for combining IPv4AddressInput, SubnetMaskSpinner Widgets and a Label
+
+<IPv4AndSubnetMaskLayout@GridLayout>:
+    orientation: 'vertical'
+    cols: 3
+    #padding: 5
+    spacing: 2
+    Label: 
+        text: 'Enter IPv4 Address and \n Subnet Mask To Be Assigned'
+        halign: 'center'
+    IPv4AddressInput:
+        id: IPv4AddressTextInput
+    SubnetMaskSpinnerLayout:
+        id: SubnetMaskSpinnerLayout
+
+
+
+#Create a custome Spinner Widget to allow for the interface type to be selected
+
+<InterfaceTypeSpinnerLayout@RelativeLayout>: 
+    Spinner:
+        id: InterfaceTypeSpinner
+        size_hint: 1, None
+        height: '32dp'
+        sync_height: True
+        text: 'InterfaceType'
+        values: 'FastEthernet', 'GigabitEthernet'
+
+
+
+
+#Create a Custom GridLayout for combining InterfaceTypeSpinner Widget, a Textinput for the interface number and a Label
+
+<InterfaceSelectionLayout@GridLayout>:
+    orientation: 'vertical'
+    cols: 3
+    spacing: 2
+    Label: 
+        text: 'Enter Interface Type and Number'
+    InterfaceTypeSpinnerLayout:
+        id: InterfaceTypeSpinnerLayout
+    TextInput:
+        id: InterfaceNumberTextInput
+        hint_text:'Interface Number'
+        multiline: False
+        size_hint_y: None
+        height: '32dp'  
+
+
+
 
  #Create a Custom PopUp Widget for Username and Password Entry
 
