--- a/Menus/RoutingIntMenu.kv
+++ b/Menus/RoutingIntMenu.kv
@@ -174,15 +174,45 @@
                     
 <RoutingIntDefaultRouteLayout@GridLayout>:
     orientation: 'vertical'
-    cols: 2
+    rows: 3
     padding: 5
+    spacing: 40
+    InterfaceSelectionLayout:
+        id: RoutingIntDefaultRouteForwardInterfaceLayout
+    RoutingIntDefaultRouteForwardIPLayout:
+        id: RoutingIntDefaultRouteForwardIPLayout
+    RoutingIntDefaultRouteMetricDistanceLayout:
+        id: RoutingIntDefaultRouteMetricDistanceLayout
+
+
+
+<RoutingIntDefaultRouteForwardIPLayout@GridLayout>:
+    orientation: 'vertical'
+    rows: 1
+    #padding: 5
     spacing: 2
     Label: 
-        text: 'Enter IPv4 Address of  Target Device'
+        text: 'Enter IPv4 Address of the Forwarding Router'
         size_hint_y: None
         height: IPv4AddressTextInput.height
     IPv4AddressInput:
         id: IPv4AddressTextInput
+
+<RoutingIntDefaultRouteMetricDistanceLayout@GridLayout>:
+    orientation: 'vertical'
+    rows: 1
+    #padding: 5
+    spacing: 2
+    Label: 
+        text: 'Enter Metric Distance for Route'
+        size_hint_y: None
+        height: MetricDistanceTextInput.height
+    TextInput:
+        id: MetricDistanceTextInput
+        hint_text:'Metric Distance (1-255)'
+        multiline: False
+        size_hint_y: None
+        height: '32dp'
 
 
 
