--- a/MenuManager.kv
+++ b/MenuManager.kv
@@ -7,7 +7,7 @@
     id: _Menu_Manager_
     transition: FadeTransition()
 
-
+    SecurityConfPasswordEncryption:
 
         #Main Menu and Sub Menu Screens
 
