--- a/Menus/SecurityConfMenu.kv
+++ b/Menus/SecurityConfMenu.kv
@@ -65,6 +65,13 @@
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
+        padding: 15
+        IPv4TargetDeviceLayout
+            id: _IPv4_Target_Device_Layout_
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
         padding: 5
         Execute:
             id: _Execute_Button_
@@ -101,6 +108,13 @@
         SecurityConfPasswordEncryptionLayout:
             id: _Security_Conf_Password_Encryption_Layout_
             main_menu_root: root
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 15
+        IPv4TargetDeviceLayout
+            id: _IPv4_Target_Device_Layout_
             size_hint: 0.9, None
     AnchorLayout:
         anchor_x: 'center'
@@ -142,6 +156,13 @@
         SecurityConfAuxVtyConLinesLayout:
             id: _Security_Conf_Aux_Vty_Con_Lines_Layout_
             main_menu_root: root
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 15
+        IPv4TargetDeviceLayout
+            id: _IPv4_Target_Device_Layout_
             size_hint: 0.9, None
     AnchorLayout:
         anchor_x: 'center'
