Added Widget layouts for each area of the SecurityConfAuxVtyConLines Screen. Not placed within screen correctly or had functionality added.
Removed the previous symbol on the menu bar to avoid confusion while function is inactive.

--- a/MenuBar.kv
+++ b/MenuBar.kv
@@ -12,7 +12,8 @@
             use_separator: True
             ActionPrevious:
                 title:  app.current_screen
-                on_release: app.GoPreviousScreen()
+                with_previous: False
+                #on_release: app.GoPreviousScreen()
             ActionOverflow:
             ActionButton:
                 text: 'Return To Main Menu'
